Install NeoForge 1.20.1 and name the one property it needs from the launcher
The installer failed twice on maven.neoforged.net timeouts and left a profile with
33 libraries missing; fetching them from the profile's own artifact entries with
retries completed the install. The profile then failed to start at
BootstrapLauncher.main:141 with 'No value present', and reading that class shows why:
the 1.1.2 launcher requires the legacyClassPath system property (or
legacyClassPath.file), which the installer does not write into the profile - its
arguments.jvm carries libraryDirectory, the module path and the add-opens/add-exports
but not that one.

So this line needs exactly one era-specific addition in the rig before the pipeline
that verified 1.21.4 can run here, plus its own META-INF/mods.toml. Both recorded
with the instance's setup details.